# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: rust.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  tests.rs
