[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["form"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["migrate", "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
reqwest = "0.12.28"
